Modified delete user endpoint
